--- a/Assignment06OOP/Assignment06OOP.csproj
+++ b/Assignment06OOP/Assignment06OOP.csproj
@@ -46,6 +46,7 @@
     <Compile Include="FirstProject\Point3D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecondProject\Maths.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
